test/files/neg/t520.check
t520.scala:8: error: overloaded method verifyKeyword needs result type
      verifyKeyword("", source, pos);
                   ^
1 error
